HelloUltraviolet/Fixtures/RejectedSource/Patterns/CaseClausesDiagnostic/Source/Main.uv
//! Rejected pattern specimen for case clause diagnostic ownership.

public procedure caseClausesDiagnosticReference() -> i32 {
    let value: i32 = 1
    return if value is {
        _ {
            1
        }
        1 {
            2
        }
    }
}
